<resources>
    <string name="app_name">Beer Masters Shop</string>
    <string name="app_title">Beer Masters\nShop</string>
    <string name="no_connection">Please check your connection</string>
    <string name="text_signin">Sign-In</string>
    <string name="text_signup">Sign-Up</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="register_password">Password</string>
    <string name="have_account">Alredy Registered? Login Here</string>
    <string name="no_account">New Here? Create Account</string>
    <string name="action_send_email">RESEND EMAIL</string>
    <string name="msg_send_email">Please verify your email</string>
    <string name="verification_email_sent">Verification email has been sent</string>
    <string name="user_created_ok">User created, verification email has been sent</string>
    <string name="welcome_tittle">Welcome\nComplete your data</string>
    <string name="edit_data_tittle">Edit your data</string>
    <string name="email_is_required">Email is required</string>
    <string name="pwd_is_required">Password must be at least 6 characters</string>
    <string name="name_is_required">Name is required</string>
    <string name="lastname_is_required">Lastname is required</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="send_reset_pwd_ok">A reset link has been sent</string>
    <string name="search_product">Search Product</string>
    <string name="goto_cart">Go to Cart</string>
    <string name="menu_home">Beer Masters Shop</string>
    <string name="menu_history">My Orders</string>
    <string name="menu_profile">Profile</string>
    <string name="home_second">Home Second</string>
    <string name="filter_products">Filter Products</string>
    <string name="edit_product">Edit Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="latest_orders">Sort by: Latest</string>
    <string name="older_orders">Sort by: Oldest</string>
    <string name="openNavDrawer">Open Nav Drawer</string>
    <string name="closeNavDrawer">Close Nav Drawer</string>
    <string name="n_home">Home</string>
    <string name="n_history">My Orders</string>
    <string name="n_profile">Profile</string>
    <string name="n_about">About us</string>
    <string name="n_logout">Logout</string>
    <string name="n_shop">Shop</string>
    <string name="n_newest">Newest Products</string>
    <string name="n_all">All Products</string>
    <string name="n_top_sales">Top Sales</string>
    <string name="header_hello">Hello</string>
    <string name="header_admin">Admin</string>
    <string name="n_payments">Payments</string>
    <string name="t_username">Username</string>
    <string name="t_name">Name</string>
    <string name="t_lastname">Lastname</string>
    <string name="t_email">Email</string>
    <string name="t_deleteacc">Delete Account</string>
    <string name="empty_fields">There are empty fields</string>
    <string name="bt_editdata">Edit your data</string>
    <string name="bt_myreviews">My Reviews</string>
    <string name="bt_changepwd">Change Password</string>
    <string name="bt_save">Save</string>
    <string name="bt_continue">Continue</string>
    <string name="current_pwd">Current Password</string>
    <string name="new_pwd">New Password</string>
    <string name="repeat_pwd">Repeat New Password</string>
    <string name="pwd_ok">Password Successfully Changed</string>
    <string name="pwd_fail">Incorrect password</string>
    <string name="error_data">An error has occurred, try it later</string>
    <string name="data_ok">Data successfully changed</string>
    <string name="no_changes">Nothing has been changed</string>
    <string name="text_pwd_authentication">Please enter your password\nto continue</string>
    <string name="text_del_acc">Delete your Account?\nThis action is irreversible</string>
    <string name="bt_confirm">Confirm</string>
    <string name="dialog_tittle_delete_acc">Are you sure you want to delete your account?</string>
    <string name="dialog_msg_delete_acc">All your data will be deleted</string>
    <string name="txt_address">Introduce your shipping address</string>
    <string name="bt_apply">Apply</string>
    <string name="txt_sortby">SORT BY:</string>
    <string name="filter_countries">Countries</string>
    <string name="filter_brands">Brands</string>
    <string-array name="sortby_array">
        <item>Default</item>
        <item>Name</item>
        <item>Price:Low to High</item>
        <item>Price:High to Low</item>
        <item>Customer Reviews</item>
    </string-array>
    <string name="prod_name">Product Name:</string>
    <string name="prod_name_hint">Product Name</string>
    <string name="price_name">Price:</string>
    <string name="prod_price">0.00€</string>
    <string name="prod_state">State:</string>
    <string name="brand_country_tittle">Brand &amp; Country:</string>
    <string name="prod_brand">Brand:</string>
    <string name="prod_country">Country:</string>
    <string name="select_brand">Select Brand &amp; Country</string>
    <string name="prod_enabled">Enabled</string>
    <string name="prod_disabled">Disabled</string>
    <string name="select_image">Select an Image</string>
    <string-array name="state_product">
        <item>Enabled</item>
        <item>Disabled</item>
    </string-array>
    <string name="delivery_address">Delivery Address:</string>
    <string name="prods_list">Products in Cart:</string>
    <string name="total_txt">Total:</string>
    <string name="pay_bt">PAY</string>
    <string name="no_orders">You have not yet placed an order</string>
    <string name="empty_cart">Cart is empty</string>
    <string name="no_product">An error has occurred\nor maybe\nThis product is not available</string>
    <string name="no_reviews_prod">This product has no reviews</string>
    <string name="no_reviews_user">You have not yet made any review</string>
    <string name="write_review">Write a Review</string>
    <string name="post_review">Post</string>
    <string name="txt_opinion">Opinion:</string>
    <string name="hint_opinion">Describe your experience(optional)</string>
    <string name="no_stars">Rating must be at least 1 star</string>
    <string name="review_post_succesfully">Review successfully posted</string>
    <string name="info_reviews">Reviews are public and not editable\nThe name on your profile will appear with your review.</string>
    <string name="bt_gohome">Go To Home</string>
    <string name="txt_operation">Operation finished with</string>
    <string name="operation_ok">Success</string>
    <string name="operation_failure">Failure</string>
    <string name="payment_ok">Thanks for buying</string>
    <string name="msg_no_connection">You have no internet connection,\ncheck your connection\nand\ntry again</string>
    <string name="bt_try_again">Try Again</string>
    <string name="add_brand_tittle">New Brand</string>
    <string name="brand_name">Brand Name</string>
    <string name="brand_is_required">Brand Name is required</string>
    <string name="brand_alredy_exists">There is already a brand with that name</string>
    <string name="no_brands">There are no brands</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="from_txt">From:</string>
    <string name="to_txt">To:</string>
    <string name="bt_search">Search</string>
</resources>